--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,7 +23,7 @@
     <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
     <script th:src="@{/webjars/sockjs-client/sockjs.min.js}"></script>
     <script th:src="@{/webjars/stomp-websocket/stomp.min.js}"></script>
-    <script th:src="@{/static/vdesCtrl.js}"></script>
+    <script th:src="@{/static/msgBroker.js}"></script>
 </head>
 <body>
     <noscript>
@@ -55,7 +55,7 @@
             </div>
             <div class="card-body">
                 <div class="row">
-                    <p class="m-2">Please sign-in to review the incoming AtoN publications.</p>
+                    <p class="m-2">Please sign-in to review the incoming publications.</p>
                 </div>
                 <div class="row d-flex justify-content-center">
                     <div class="btn btn-primary text-">
@@ -68,15 +68,15 @@
         </div>
         <div class="card" sec:authorize="isAuthenticated()">
             <div class="card-header">
-                <h2>AtoN Publications Board</h2>
+                <h2>Incoming Publications Board</h2>
             </div>
             <div class="card-body">
                 <div class="row">
                     <div class="col-md-12">
                         <div class="row form-group">
                             <div class="col-md-4 d-flex align-items-center">
-                                <label class="m-1" for="connect">Endpoint Connection:</label>
-                                <select name="VDES Connection" id="endpoint">
+                                <label class="m-1" for="connect">Publication Subject:</label>
+                                <select name="Publication" id="endpoint">
                                     <option th:each="endpoint : ${endpoints}" th:value="${endpoint}" th:text="${endpoint}"/>
                                 </select>
                             </div>
@@ -92,7 +92,7 @@
                         <table id="messages" class="table table-striped text-break">
                             <thead>
                             <tr class="d-flex">
-                                <th class="col-4">Aton UID</th>
+                                <th class="col-4">ID</th>
                                 <th class="col-4">Date</th>
                                 <th class="col-2">Latitude</th>
                                 <th class="col-2">Longitude</th>
