--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -74,13 +74,13 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="row form-group">
-                            <div class="col-md-4 d-flex align-items-center">
+                            <div class="col-md-5 d-flex align-items-center">
                                 <label class="m-1" for="connect">Publication Subject:</label>
-                                <select name="Publication" id="endpoint">
+                                <select name="Publication" id="endpoint" style="min-width: 150px;">
                                     <option th:each="endpoint : ${endpoints}" th:value="${endpoint}" th:text="${endpoint}"/>
                                 </select>
                             </div>
-                            <div class="col-md-8">
+                            <div class="col-md-7">
                                 <button id="connect" class="btn btn-primary" type="button">Connect</button>
                                 <button id="disconnect" class="btn btn-secondary" type="button" disabled="disabled">Disconnect</button>
                             </div>
