--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -92,8 +92,7 @@
                             <tr class="d-flex">
                                 <th class="col-4">ID</th>
                                 <th class="col-4">Date</th>
-                                <th class="col-2">Latitude</th>
-                                <th class="col-2">Longitude</th>
+                                <th class="col-2">Content</th>
                             </tr>
                             </thead>
                             <tbody id="incoming">
