--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -88,8 +88,9 @@
         <div th:replace="fragments/general.html :: footer"></div>
     </div>
     <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+    <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
     <script th:src="@{/webjars/sockjs-client/sockjs.min.js}"></script>
     <script th:src="@{/webjars/stomp-websocket/stomp.min.js}"></script>
-    <script th:src="@{/static/msgBroker.js}"></script>
+    <script th:src="@{/src/msgBroker.js}"></script>
 </body>
 </html>
