--- a/src/main/resources/templates/fragments/general.html
+++ b/src/main/resources/templates/fragments/general.html
@@ -23,6 +23,29 @@
         <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" >
         <link rel="stylesheet" th:href="@{/webjars/font-awesome/5.11.2/css/all.min.css}"/>
         <link rel="stylesheet" th:href="@{/css/common.css}"/>
+        <style th:inline="text">
+            .sky-bg {
+              /*! min-height: 100%; */
+              /*! position: relative; */
+              /*! font: 14px/16px "Roboto", sans-serif; */
+              /*! color: #ffffff; */
+              /*! background-color: #F0F3F4; */ }
+              .sky-bg::before {
+                content: '';
+                position: fixed;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                left: 0;
+                background: url("images/sky-bg.jpg") no-repeat center center;
+                background-size: cover;
+                will-change: transform;
+                z-index: -1;
+            }
+            .sky-bg .additional-bg {
+                display: none;
+            }
+        </style>
     </head>
     <body>
         <div th:fragment="navbar">
@@ -33,7 +56,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav mr-auto">
+                    <ul class="navbar-nav me-auto">
                         <li class="nav-item" sec:authorize="isAuthenticated()">
                             <a class="nav-link" href="/index.html">
                                 Home
@@ -61,6 +84,24 @@
             </nav>
         </div>
         <p>Checkout fragments in action!</p>
+        <div th:fragment="login-card" class="card shadow" sec:authorize="!isAuthenticated()">
+            <div class="card-header">
+                <h2>Welcome to the MCP Service Registry</h2>
+            </div>
+            <div class="card-body">
+                <div class="row">
+                    <p class="m-2">Please sign-in to access the service facilities.</p>
+                </div>
+                <div class="row">
+                    <div class="d-flex justify-content-center">
+                        <button type="button" class="btn btn-primary" title="Sign In" onclick="window.location.href='/login'">
+                            <i class="fas fa-sign-in-alt"></i>&nbsp;
+                            <span class="btn-label">Sign In</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div th:fragment="footer" class="flex-fill flex-grow-0 flex-shrink-1">
             <footer class="footer bg-dark">
                 <div class="row">
