--- a/src/main/resources/templates/fragments/general.html
+++ b/src/main/resources/templates/fragments/general.html
@@ -15,11 +15,11 @@
   -->
 
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
     <head th:fragment="headerfiles">
         <meta charset="UTF-8">
         <title>e-Navigation VDES Controller</title>
-        <link rel="icon" type="image/png" href="/images/favicon.ico" />
+        <link rel="icon" type="image/png" th:href="@{/images/favicon.ico}" />
         <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" >
         <link rel="stylesheet" th:href="@{/webjars/font-awesome/5.11.2/css/all.min.css}"/>
         <link rel="stylesheet" th:href="@{/css/common.css}"/>
@@ -59,24 +59,24 @@
                     <div class="collapse navbar-collapse" id="navbarNavDropdown">
                         <ul class="navbar-nav me-auto">
                             <li class="nav-item" sec:authorize="isAuthenticated()">
-                                <a class="nav-link" href="/index.html">
+                                <a class="nav-link" th:href="@{index.html}">
                                     Home
                                 </a>
                             </li>
                             <li class="nav-item" sec:authorize="isAuthenticated()">
-                                <a class="nav-link" href="/about">
+                                <a class="nav-link" th:href="@{about}">
                                     About
                                 </a>
                             </li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
                             <li class="nav-item" sec:authorize="!isAuthenticated()">
-                                <a class="nav-link" href="/login" th:href="@{/login}">
+                                <a class="nav-link" th:href="@{login}">
                                     <i class="fas fa-sign-in-alt"></i>&nbsp;Sign in
                                 </a>
                             </li>
                             <li sec:authorize="isAuthenticated()">
-                                <a class="nav-link" href="/logout" th:href="@{/logout}">
+                                <a class="nav-link" th:href="@{logout}">
                                     <i class="fas fa-sign-out-alt"></i> Logout
                                 </a>
                             </li>
@@ -123,5 +123,7 @@
                 </div>
             </footer>
         </div>
+        <iframe th:fragment="sessionRefresher" sec:authorize="isAuthenticated()" id="sessionRefresher" th:src="@{refresh}" style="display: none;" onload="refreshSession()">
+        </iframe>
     </body>
 </html>
