--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -78,6 +78,6 @@
     <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
     <script th:src="@{/webjars/sockjs-client/sockjs.min.js}"></script>
     <script th:src="@{/webjars/stomp-websocket/stomp.min.js}"></script>
-    <script th:src="@{/src/msgBroker.js}"></script>
+    <script th:src="@{/src/index.js}"></script>
 </body>
 </html>
