--- a/src/main/resources/templates/fragments/general.html
+++ b/src/main/resources/templates/fragments/general.html
@@ -73,7 +73,7 @@
                     <div class="collapse navbar-collapse" id="navbarNavDropdown">
                         <ul class="navbar-nav me-auto">
                             <li class="nav-item" sec:authorize="isAuthenticated()">
-                                <a class="nav-link" th:href="@{index.html}">
+                                <a class="nav-link" th:href="@{index}">
                                     Home
                                 </a>
                             </li>
