--- a/src/main/resources/templates/fragments/general.html
+++ b/src/main/resources/templates/fragments/general.html
@@ -46,20 +46,6 @@
                 display: none;
             }
         </style>
-        <script>
-            /**
-             * Once authenticated, the OpenID connection token expires regularly
-             * and our AJAX calls will be rejected. To handle that in a simple
-             * way, we can just reload the current page in regular intervals.
-             */
-            function refreshSession() {
-                setTimeout(() => {
-                    if(document.getElementById('sessionRefresher')) {
-                        document.getElementById('sessionRefresher').src = document.getElementById('sessionRefresher').src;
-                    }
-                }, 90000);
-            }
-        </script>
     </head>
     <body>
         <div th:fragment="navbar">
@@ -85,13 +71,13 @@
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
                             <li class="nav-item" sec:authorize="!isAuthenticated()">
-                                <a class="nav-link" th:href="@{login}">
-                                    <i class="fas fa-sign-in-alt"></i>&nbsp;Sign in
+                                <a class="nav-link" href="/login" th:href="@{/sso/login}">
+                                    <i class="fa-solid fa-right-to-bracket"></i>&nbsp;Sign in
                                 </a>
                             </li>
                             <li sec:authorize="isAuthenticated()">
-                                <a class="nav-link" th:href="@{logout}">
-                                    <i class="fas fa-sign-out-alt"></i> Logout
+                                <a class="nav-link" href="/logout" th:href="@{/logout}">
+                                    <i class="fa-solid fa-right-from-bracket"></i>&nbsp;Logout
                                 </a>
                             </li>
                         </ul>
@@ -111,7 +97,7 @@
                 <div class="row">
                     <div class="d-flex justify-content-center">
                         <button type="button" class="btn btn-primary" title="Sign In" onclick="window.location.href='login'">
-                            <i class="fas fa-sign-in-alt"></i>&nbsp;
+                            <i class="fa-solid fa-right-to-bracket"></i>
                             <span class="btn-label">Sign In</span>
                         </button>
                     </div>
@@ -137,7 +123,5 @@
                 </div>
             </footer>
         </div>
-        <iframe th:fragment="sessionRefresher" sec:authorize="isAuthenticated()" id="sessionRefresher" th:src="@{refresh}" style="display: none;" onload="refreshSession()">
-        </iframe>
     </body>
 </html>
