--- a/src/main/resources/templates/fragments/general.html
+++ b/src/main/resources/templates/fragments/general.html
@@ -18,7 +18,7 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
     <head th:fragment="headerfiles">
         <meta charset="UTF-8">
-        <title>e-Navigation VDES Controller</title>
+        <title>e-Navigation Message Broker</title>
         <link rel="icon" type="image/png" th:href="@{/images/favicon.ico}" />
         <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" >
         <link rel="stylesheet" th:href="@{/webjars/font-awesome/6.1.0/css/all.min.css}"/>
