Removing the tilda from the links

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -74,10 +74,10 @@
         </div>
         <div th:replace="~{fragments/general.html :: footer}"></div>
     </div>
-    <script th:src="@{~/webjars/jquery/jquery.min.js}"></script>
-    <script th:src="@{~/webjars/bootstrap/js/bootstrap.min.js}"></script>
-    <script th:src="@{~/webjars/sockjs-client/sockjs.min.js}"></script>
-    <script th:src="@{~/webjars/stomp-websocket/stomp.min.js}"></script>
-    <script th:src="@{~/src/index.js}"></script>
+    <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+    <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+    <script th:src="@{/webjars/sockjs-client/sockjs.min.js}"></script>
+    <script th:src="@{/webjars/stomp-websocket/stomp.min.js}"></script>
+    <script th:src="@{/src/index.js}"></script>
 </body>
 </html>
