--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -51,7 +51,7 @@
             </div>
             <div th:replace="~{fragments/general.html :: footer}"></div>
         </div>
-        <script th:src="@{~/webjars/jquery/jquery.min.js}"></script>
-        <script th:src="@{~/webjars/bootstrap/js/bootstrap.min.js}"></script>
+        <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+        <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
     </body>
 </html>
